<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context="com.koc.movinfo.MainActivity"
    >

    <android.support.constraint.ConstraintLayout
        android:id="@+id/main_constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/popular_category_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/screen_background_light"
            app:layout_constraintBottom_toTopOf="@id/popular_category_recyclerView"
            android:elevation="4dp"
            android:paddingEnd="8dp"
            android:paddingStart="12dp"
            android:paddingTop="8dp"
            android:text="@string/popular_category_title_text"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/popular_category_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            app:layout_constraintTop_toBottomOf="@id/popular_category_title" />

        <TextView
            android:id="@+id/now_playing_category_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/screen_background_light"
            android:elevation="4dp"
            android:paddingEnd="8dp"
            android:paddingStart="12dp"
            android:text="@string/now_playing_category_title_text"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/popular_category_recyclerView" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/now_playing_category_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            app:layout_constraintTop_toBottomOf="@id/now_playing_category_title" />

        <TextView
            android:id="@+id/upcoming_category_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/screen_background_light"
            android:elevation="4dp"
            android:paddingEnd="8dp"
            android:paddingStart="12dp"
            android:text="@string/upcoming_category_title_text"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/now_playing_category_recyclerView" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/upcoming_category_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            app:layout_constraintTop_toBottomOf="@id/upcoming_category_title" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>
